--- a/css/index.css
+++ b/css/index.css
@@ -106,7 +106,7 @@ header .contenedor-texto .texto .profesion{
 .main .acerca-de .texto .titulo{
     font-size: 34px;
     line-height: 34px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     font-weight: 300;
     color: #dd820d;
     text-align: center;
@@ -115,6 +115,10 @@ header .contenedor-texto .texto .profesion{
 .main .acerca-de .texto .bold{
     color: #3895ea;
     text-decoration: underline;
+}
+
+.main .acerca-de .cv {
+    margin-bottom: 10px;
 }
 
 .main .trabajos{
